--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy = "0.12.0"
+bevy = {version = "0.12.0", features = ["dynamic_linking"] }
+bytemuck = "1.14.0"
+# wgpu = "0.17.1"
