--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2021"
 
 [dependencies]
 bevy = {version = "0.12.0", features = ["dynamic_linking"] }
-# bevy = "0.12.0"
+bevy_flycam = "0.12.0"
 bytemuck = "1.14.0"
 # wgpu = "0.17.1"
