--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,11 @@ name = "pulse"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[profile.dev]
+opt-level = 2
 
 [dependencies]
-bevy = {version = "0.12.0", features = ["dynamic_linking"] }
+# bevy = {version = "0.12.0", features = ["dynamic_linking"] }
+bevy = {version = "0.12.0" }
 bevy_flycam = "0.12.0"
 bytemuck = "1.14.0"
-# wgpu = "0.17.1"
