--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,7 @@ edition = "2021"
 opt-level = 2
 
 [dependencies]
-bevy = { version = "0.12.0", features = ["dynamic_linking"] }
-# bevy = {version = "0.12.0" }
-# bevy_flycam = "0.12.0"
+# bevy = { version = "0.12.1", features = ["dynamic_linking"] }
+bevy = "0.12.1"
 bevy_camera_controller = { path = "../bevy_camera_controller" }
 bytemuck = "1.14.0"
