--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,5 @@ opt-level = 2
 [dependencies]
 # bevy = { version = "0.12.1", features = ["dynamic_linking"] }
 bevy = "0.12.1"
-bevy_camera_controller = { path = "../bevy_camera_controller" }
+bevy_camera_operator = { path = "../bevy_camera_operator" }
 bytemuck = "1.14.0"
