--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,9 @@ edition = "2021"
 opt-level = 2
 
 [dependencies]
-bevy = { version = "0.12.1", features = ["dynamic_linking"] }
-# bevy = "0.12.1"
-wgpu = "0.17.1"
-bevy_camera_operator = { path = "../bevy_camera_operator" }
-bevy_egui = "0.24.0"
+bevy = { path = "./bevy", features = ["dynamic_linking"] }
+# bevy = { path = "/home/ruben/dev/bevy/bevy" }
+# wgpu = "0.17.1"
+# bevy_camera_operator = { path = "../bevy_camera_operator" }
+# bevy_egui = { path = "/home/ruben/dev/bevy/bevy_egui-0.24.0" }
 bytemuck = "1.14.0"
