--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ opt-level = 2
 [dependencies]
 bevy = { git = "https://github.com/rubengrim/bevy", branch = "pulse", features = ["dynamic_linking"] }
 # bevy = { git = "https://github.com/rubengrim/bevy", branch = "pulse" }
-# wgpu = "0.17.1"
 bevy_camera_operator = { git = "ssh://github.com/rubengrim/bevy_camera_operator.git" }
 bevy_egui = { path = "/home/ruben/dev/bevy/bevy_egui-0.24.0" }
 bytemuck = "1.14.0"
+rand = "0.8.5"
